# ad-wb-adapter

./: .env.example  .gitattributes  .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  docker-compose.yaml  import datetime.py  mypy.ini  pyproject.toml  pyrightconfig.json  setup.cfg
app/: .dockerignore  .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/src/: main.py  utils.py
app/src/adapters/: base.py  campaign.py  http_adapter.py  http_client.py  supplier.py  token.py  token_manager.py  wb_http_adapter.py  wb_http_client.py
app/src/adapters/wb/: campaign.py  stake.py  supplier.py  utils.py  wbadapter.py
app/src/core/: arq.py  logger.py  settings.py
app/src/core/utils/: context.py  extra_log_params_middleware.py  filters.py
app/src/db/: queue.py  redis.py
app/src/depends/: arq.py  http_client.py  httpx_client.py  shutdown.py  startup.py
app/src/depends/adapters/: campaign.py  http_adapter.py  stake.py  supplier.py  token.py  token_manager.py
app/src/depends/db/: queue.py  redis.py
app/src/depends/services/: queue.py
app/src/dto/: campaign.py  job_result.py  stake.py  supplier.py  token.py
app/src/dto/official/: advert.py  stake.py
app/src/dto/unofficial/: advert.py  campaign.py  product.py  stake.py
app/src/endpoints/: __init__.py
app/src/endpoints/v1/: __init__.py
app/src/exceptions/: base.py  campaign.py  supplier.py
app/src/routers/: metadata.py  utils.py
app/src/routers/v1/: __init__.py  advert.py  campaign.py  campaigns.py  jobs.py  product.py  stake.py  supplier.py
app/src/schemas/: common.py
app/src/services/: advert.py  campaign.py  product.py  queue.py  stake.py  supplier.py
app/src/tasks/: __init__.py  campaign_tasks.py  create_campaign.py  create_full_campaign.py  restart_create_campaign.py
(+34 files in other folders)
