[tool.poetry]
name = "ad-wb-adapter"
version = "0.1.0"
description = ""
authors = ["Maxim Babikhin <9652485@gmail.com>"]
readme = "README.md"
packages = [{include = "wb_adapter"}]

[tool.poetry.dependencies]
python = "^3.11.2"
httpx = "0.23.3"
fake-useragent = "1.1.3"
fastapi = "0.95.1"
arq = "0.25.0"
gunicorn = "20.1.0"
uvicorn = "0.21.0"
uvloop = "0.17.0"
aio-pika = "9.0.5"
orjson="3.8.10"
backoff = "^2.2.1"
attrs = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.1.2"
types-redis = "^4.5.4.1"
openapi-python-client = "^0.14.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]